[tool.poetry]
name = "track-bitcoin"
version = "0.1.0"
description = "Bitcoin price track"
authors = ["nilton seixas <nfsseixas@gmail.com>"]
readme = "README.md"
packages = [{include = "track_bitcoin"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
